[gd_scene load_steps=13 format=3 uid="uid://uv73jmnpfp6"]

[ext_resource type="Texture2D" uid="uid://ciidgqeuvko6j" path="res://ShmupSandbox/Assets/Enemy/enemyBlack1.png" id="1_flo0d"]
[ext_resource type="Script" uid="uid://bf1silpptuf3y" path="res://ShmupSandbox/Enemies/Scripts/rebel_fighter.gd" id="1_to7fy"]
[ext_resource type="Texture2D" uid="uid://0uiw6fd5nr31" path="res://ShmupSandbox/Assets/Player/spaceship-001-spritesheet-001.png" id="2_77s1a"]

[sub_resource type="CircleShape2D" id="CircleShape2D_flo0d"]
radius = 37.3363

[sub_resource type="AtlasTexture" id="AtlasTexture_mqof1"]
atlas = ExtResource("2_77s1a")
region = Rect2(0, 108, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_wew1h"]
atlas = ExtResource("2_77s1a")
region = Rect2(32, 108, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_uda7c"]
atlas = ExtResource("2_77s1a")
region = Rect2(64, 108, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_6d5ge"]
atlas = ExtResource("2_77s1a")
region = Rect2(96, 108, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_bgiwp"]
atlas = ExtResource("2_77s1a")
region = Rect2(128, 108, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_uf8q7"]
atlas = ExtResource("2_77s1a")
region = Rect2(160, 108, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_to7fy"]
atlas = ExtResource("1_flo0d")
region = Rect2(0, 0, 93, 84)

[sub_resource type="SpriteFrames" id="SpriteFrames_77s1a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mqof1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wew1h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uda7c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6d5ge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgiwp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uf8q7")
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"death",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_to7fy")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}]

[node name="rebel_fighter" type="Area2D"]
collision_layer = 8
collision_mask = 3
script = ExtResource("1_to7fy")
hp = 2
speed = 350.0

[node name="collider" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_flo0d")
debug_color = Color(0.897961, 0.293812, 0.302015, 0.42)

[node name="body" type="AnimatedSprite2D" parent="."]
modulate = Color(0.941176, 0.988235, 0, 1)
scale = Vector2(0.8, 0.8)
sprite_frames = SubResource("SpriteFrames_77s1a")
animation = &"death"
autoplay = "idle"

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, -58)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
